/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto3";
option go_package = "gen/api/v1/loginService";

package loginService;

message Jwt {
  string jwt = 1;
  string path = 2;
}

message ResultApiSix {
  int32 statusCode = 1;
  string msg = 2;
  ApiSixUserInfo apisixUserInfo = 3;
}

message ApiSixUserInfo {
  string sub = 1;
  string aud = 2;
  uint64 audId = 3;
  map<string, string> addPathParam = 4;
}

service ApiSixServer {
  rpc decodeAndVerifyV3 (Jwt) returns (ResultApiSix);
}